Extrac common part for function annotation code completion support, to share with other function services